// Protoconf - Tableau's data interchange format
// https://tableauio.github.io/
// A proto file we will use for unit testing.

syntax = "proto3";

package unittest;

option go_package = "github.com/tableauio/tableau/proto/tableaupb/unittestpb";

import "tableau/protobuf/tableau.proto";

enum FruitType {
  FRUIT_TYPE_UNKNOWN = 0 [(tableau.evalue).name = "Unknown"];
  FRUIT_TYPE_APPLE = 1 [(tableau.evalue).name = "Apple"];
  FRUIT_TYPE_ORANGE = 3 [(tableau.evalue).name = "Orange"];
  FRUIT_TYPE_BANANA = 4 [(tableau.evalue).name = "Banana"];
}

enum FruitFlavor {
  FRUIT_FLAVOR_UNKNOWN = 0 [(tableau.evalue).name = "Unknown"];
  FRUIT_FLAVOR_FRAGRANT = 1 [(tableau.evalue).name = "Fragrant"];
  FRUIT_FLAVOR_SOUR = 2 [(tableau.evalue).name = "Sour"];
  FRUIT_FLAVOR_SWEET = 3 [(tableau.evalue).name = "Sweet"];
}

message Item {
  uint32 id = 1 [(tableau.field).name = "ID"];
  int32 num = 2 [(tableau.field).name = "Num"];
}

message Target {
  option (tableau.union) = true;

  Type type = 9999 [(tableau.field) = { name: "Type" }];
  oneof value {
    option (tableau.oneof) = {
      field: "Field"
    };
    Pvp pvp = 1;  // Bound to enum value: TYPE_PVP.
    Pve pve = 2;  // Bound to enum value: TYPE_PVP.
  }

  enum Type {
    TYPE_NIL = 0;
    TYPE_PVP = 1 [(tableau.evalue) = { name: "PVP" }];
    TYPE_PVE = 2 [(tableau.evalue) = { name: "PVE" }];
  }
  message Pvp {
    int32 type = 1;
    uint32 health = 2;
    int64 damage = 3;
  }
  message Pve {
    Mission mission = 1 [(tableau.field) = { name: "Mission" }];  // incell struct
    repeated int32 heros = 2;                                     // incell list
    map<int32, int64> dungeons = 3;                               // incell map

    message Mission {
      int32 id = 1;
      uint32 level = 2;
      int64 damage = 3;
    }
  }
}
