// clang-format off

syntax = "proto3";

package unittest;

option go_package = "github.com/tableauio/tableau/proto/tableaupb/unittestpb";
option (tableau.workbook) = {name: "unittest/Unittest#*.csv"};

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "tableau/protobuf/tableau.proto";
import "tableau/protobuf/unittest/common.proto";

message SimpleIncellMap {
  option (tableau.worksheet) = {name:"SimpleIncellMap" namerow:1 typerow:2 noterow:3 datarow:4};
  
  map<int32, int32> item_map = 1 [(tableau.field) = {name:"Item" layout:LAYOUT_INCELL}];
}

message IncellMap {
  option (tableau.worksheet) = {name:"IncellMap" namerow:1 typerow:2 noterow:3 datarow:4};

  map<int32, Fruit> fruit_map = 1 [(tableau.field) = {name:"Fruit" key:"Key" layout:LAYOUT_INCELL}];
  message Fruit {
    unittest.FruitType key = 1 [(tableau.field) = {name:"Key"}];
    int64 value = 2 [(tableau.field) = {name:"Value"}];
  }
  map<int64, unittest.FruitFlavor> flavor_map = 2 [(tableau.field) = {name:"Flavor" layout:LAYOUT_INCELL}];
  map<int32, Item> item_map = 3 [(tableau.field) = {name:"Item" key:"Key" layout:LAYOUT_INCELL}];
  message Item {
    unittest.FruitType key = 1 [(tableau.field) = {name:"Key"}];
    unittest.FruitFlavor value = 2 [(tableau.field) = {name:"Value"}];
  }
}

message IncellStructList {
  option (tableau.worksheet) = {name:"IncellStructList" namerow:1 typerow:2 noterow:3 datarow:4};

  repeated unittest.Item item_list = 1 [(tableau.field) = {name:"Item" layout:LAYOUT_INCELL}];
}

message IncellList {
  option (tableau.worksheet) = {name:"IncellList" namerow:1 typerow:2 noterow:3 datarow:4};

  repeated int32 value_list = 1 [(tableau.field) = {name:"Value" layout:LAYOUT_INCELL}];
  repeated unittest.FruitFlavor flavor_list = 2 [(tableau.field) = {name:"Flavor" layout:LAYOUT_INCELL}];
  repeated unittest.Item item_list = 3 [(tableau.field) = {name:"Item" layout:LAYOUT_INCELL}];
}

message ItemConf {
  option (tableau.worksheet) = {name:"ItemConf" namerow:1 typerow:2 noterow:3 datarow:4};

  map<uint32, unittest.Item> item_map = 1 [(tableau.field) = {key:"ID" layout:LAYOUT_VERTICAL prop:{sequence:1}}];
}

message MallConf {
  option (tableau.worksheet) = {name:"MallConf" namerow:1 typerow:2 noterow:3 datarow:4};

  map<uint32, Shop> shop_map = 1 [(tableau.field) = {key:"ShopID" layout:LAYOUT_VERTICAL}];
  message Shop {
    uint32 shop_id = 1 [(tableau.field) = {name:"ShopID"}];
    map<uint32, Goods> goods_map = 2 [(tableau.field) = {key:"GoodsID" layout:LAYOUT_VERTICAL}];
    message Goods {
      uint32 goods_id = 1 [(tableau.field) = {name:"GoodsID"}];
      int32 price = 2 [(tableau.field) = {name:"Price"}];
    }
  }
}

message RewardConf {
  option (tableau.worksheet) = {name:"RewardConf" namerow:1 typerow:2 noterow:3 datarow:4};

  map<uint32, Reward> reward_map = 1 [(tableau.field) = {key:"RewardID" layout:LAYOUT_VERTICAL}];
  message Reward {
    uint32 reward_id = 1 [(tableau.field) = {name:"RewardID"}];
    map<uint32, unittest.Item> item_map = 2 [(tableau.field) = {name:"Item" key:"ID" layout:LAYOUT_HORIZONTAL}];
  }
}

message YamlScalarConf {
  option (tableau.worksheet) = {name:"YamlScalarConf"};

  uint32 id = 1 [(tableau.field) = {name:"ID"}];
  int32 num = 2 [(tableau.field) = {name:"Num"}];
  uint64 value = 3 [(tableau.field) = {name:"Value"}];
  int64 weight = 4 [(tableau.field) = {name:"Weight"}];
  float percentage = 5 [(tableau.field) = {name:"Percentage"}];
  double ratio = 6 [(tableau.field) = {name:"Ratio"}];
  string name = 7 [(tableau.field) = {name:"Name"}];
  bytes blob = 8 [(tableau.field) = {name:"Blob"}];
  bool ok = 9 [(tableau.field) = {name:"OK"}];
}

message PatchReplaceConf {
  option (tableau.worksheet) = {name:"PatchReplaceConf" namerow:1 typerow:2 noterow:3 datarow:4 patch:PATCH_REPLACE};
  
  string name = 1 [(tableau.field) = {name: "Name" }];
  repeated int32 price_list = 2 [(tableau.field) = {name: "Price" layout: LAYOUT_INCELL }];
}

message PatchMergeConf {
  option (tableau.worksheet) = {name:"PatchMergeConf" namerow:1 typerow:2 noterow:3 datarow:4 patch:PATCH_MERGE};
  
  string name = 1 [(tableau.field) = {name:"Name" }];
  string name2 = 2 [(tableau.field) = {name: "Name2" }];
  optional string name3 = 3 [(tableau.field) = {name: "Name3" }];
  Time time = 4 [(tableau.field) = {name:"Time"}];
  message Time {
    google.protobuf.Timestamp start = 1 [(tableau.field) = {name:"Start"}];
    google.protobuf.Duration expiry = 2 [(tableau.field) = {name:"Expiry"}];
  }
  repeated int32 price_list = 5 [(tableau.field) = {name:"Price" layout:LAYOUT_INCELL }];
  repeated int32 replace_price_list = 6 [(tableau.field) = {name:"ReplacePrice" layout:LAYOUT_INCELL prop:{patch:PATCH_REPLACE}}];
  map<uint32, unittest.Item> item_map = 7 [(tableau.field) = {name:"Item" key:"ID" layout:LAYOUT_HORIZONTAL}];
  map<uint32, unittest.Item> replace_item_map = 8 [(tableau.field) = {name:"ReplaceItem" key:"ID" layout:LAYOUT_HORIZONTAL prop:{patch:PATCH_REPLACE}}];
}

message RecursivePatchConf {
  option (tableau.worksheet) = {name:"RecursivePatchConf" namerow:1 typerow:2 noterow:3 datarow:4 patch:PATCH_MERGE};
  
  map<uint32, Shop> shop_map = 1 [(tableau.field) = {key:"ShopID" layout:LAYOUT_VERTICAL}];
  message Shop {
    uint32 shop_id = 1 [(tableau.field) = {name:"ShopID"}];
    map<uint32, Goods> goods_map = 2 [(tableau.field) = {key:"GoodsID" layout:LAYOUT_VERTICAL}];
    message Goods {
      uint32 goods_id = 1 [(tableau.field) = {name:"GoodsID"}];
      bytes desc = 2 [(tableau.field) = {name:"Desc"}];
      map<uint32, Currency> currency_map = 3 [(tableau.field) = {name:"Currency" key:"Type" layout:LAYOUT_HORIZONTAL}];
      message Currency {
        uint32 type = 1 [(tableau.field) = {name:"Type"}];
        repeated int32 price_list = 2 [(tableau.field) = {name:"Price" layout:LAYOUT_INCELL prop:{patch:PATCH_REPLACE}}];
        map<int32, int32> value_list = 3 [(tableau.field) = {name:"Value" layout:LAYOUT_INCELL}];
        map<int32, bytes> message_list = 4 [(tableau.field) = {name:"Message" layout:LAYOUT_INCELL}];
      }
      repeated bytes tag_list = 4 [(tableau.field) = {name:"Tag" layout:LAYOUT_HORIZONTAL prop:{patch:PATCH_REPLACE}}];
      repeated Award award_list = 5 [(tableau.field) = {name:"Award" layout:LAYOUT_HORIZONTAL}];
      message Award {
        uint32 id = 1 [(tableau.field) = {name:"Id"}];
        int32 num = 2 [(tableau.field) = {name:"Num"}];
      }
    }
  }
}

message JsonUtilTestData {
  PatchMergeConf normal_field = 1;
  repeated PatchMergeConf list_field = 2;
  map<int32, PatchMergeConf> map_field = 3;
}

message UniqueFieldInVerticalStructList {
  option (tableau.worksheet) = {name:"UniqueFieldInVerticalStructList"};

  repeated Item item_list = 1 [(tableau.field) = {layout:LAYOUT_VERTICAL}];
  message Item {
    uint32 id = 1 [(tableau.field) = {name:"ID" prop:{unique:true}}];
    string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
    string desc = 3 [(tableau.field) = {name:"Desc"}];
  }
}

message VerticalUniqueFieldStructMap {
  option (tableau.worksheet) = {name:"VerticalUniqueFieldStructMap"};

  map<uint32, Main> main_map = 1 [(tableau.field) = {key:"MainID" layout:LAYOUT_VERTICAL}];
  message Main {
    uint32 main_id = 1 [(tableau.field) = {name:"MainID"}];
    string main_name = 2 [(tableau.field) = {name:"MainName" prop:{unique:true}}];
    map<int32, int32> main_kv_map = 3 [(tableau.field) = {name:"MainKV" layout:LAYOUT_INCELL prop:{optional:true}}];
    map<uint32, Sub> sub_map = 4 [(tableau.field) = {key:"SubID" layout:LAYOUT_VERTICAL}];
    message Sub {
      uint32 sub_id = 1 [(tableau.field) = {name:"SubID"}];
      string sub_name = 2 [(tableau.field) = {name:"SubName" prop:{unique:true}}];
    }
  }
}

message DocumentUniqueFieldStructList {
  option (tableau.worksheet) = {name:"DocumentUniqueFieldStructList"};

  repeated Item item_list = 1 [(tableau.field) = {name:"Items"}];
  message Item {
    uint32 id = 1 [(tableau.field) = {name:"ID" prop:{unique:true}}];
    string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
    int32 num = 3 [(tableau.field) = {name:"Num"}];
  }
}

message DocumentUniqueFieldStructMap {
  option (tableau.worksheet) = {name:"DocumentUniqueFieldStructMap"};

  map<string, Chapter> chapter = 1 [(tableau.field) = {name:"Chapter" key:"@key" prop:{optional:true}}];
  message Chapter {
    string key = 1 [(tableau.field) = {name:"@key" prop:{unique:true}}];
    string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
    map<string, Section> section = 3 [(tableau.field) = {name:"Section" key:"@key"}];
    message Section {
      string key = 1 [(tableau.field) = {name:"@key" prop:{unique:true}}];
      string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
    }
  }
  map<uint32, string> scalar_map = 2 [(tableau.field) = {name:"ScalarMap" prop:{optional:true}}];
  map<uint32, string> incell_map = 5 [(tableau.field) = {name:"IncellMap" layout:LAYOUT_INCELL prop:{optional:true}}];
  // for card prefix tests
  map<string, ChapterInfo> chapter_info = 13 [(tableau.field) = {name:"ChapterInfo" key:"@key" prop:{optional:true}}];
  message ChapterInfo {
    string key = 1 [(tableau.field) = {name:"@key" prop:{unique:true}}];
    string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
    map<string, Section> section = 3 [(tableau.field) = {name:"Section" key:"@key" prop:{optional:true}}];
    message Section {
      string key = 1 [(tableau.field) = {name:"@key" prop:{unique:true}}];
      string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
      map<string, Section> section = 3 [(tableau.field) = {name:"Section" key:"@key" prop:{optional:true}}];
      message Section {
        string key = 1 [(tableau.field) = {name:"@key" prop:{unique:true}}];
        string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
        map<string, Section> section = 3 [(tableau.field) = {name:"Section" key:"@key" prop:{optional:true}}];
        message Section {
          string key = 1 [(tableau.field) = {name:"@key" prop:{unique:true}}];
          string name = 2 [(tableau.field) = {name:"Name" prop:{unique:true}}];
        }
      }
    }
  }
}